--- a/style/highscore.css
+++ b/style/highscore.css
@@ -1,14 +1,22 @@
 @font-face {
     font-family: mangatb;
-    src: url(fonts/mangatb.ttf);
+    src: url(../fonts/mangatb.ttf);
 }
 @font-face {
     font-family: mangat;
-    src: url(fonts/mangat.ttf);
+    src: url(../fonts/mangat.ttf);
 }
 @font-face {
     font-family: mangati;
-    src: url(fonts/mangati.ttf);
+    src: url(../fonts/mangati.ttf);
+}
+@font-face {
+    font-family: animebld;
+    src: url(../fonts/animeace2_bld.ttf);
+}
+@font-face {
+    font-family: animeital;
+    src: url(../fonts/animeace2_ital.ttf);
 }
 
 :root {
@@ -51,15 +59,14 @@ body{
 
 #logo {
     padding-left: 1rem;
-    font-size: 23px;
+    font-size: 22px;
     align-self: center;
     color: white;
     text-shadow: 1px 1px 2px #0a0a0a;
-    font-family: mangatb;
+    font-family: animebld;
 }
 
 #menu {
-    font-size: 33px;
     align-self: center;
     justify-self: right;
     padding-right: 1rem;
@@ -68,12 +75,13 @@ body{
 i.fas.fa-paw{
     color: var(--panda-color);
     text-shadow: 1px 1px 2px #0a0a0a;
-    font-size: 33px !important;
+    font-size: 32px !important;
 }
 
 .fas.fa-bars{
     color: var(--panda-color1);
     text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px;
 }
 
 #container-body {
@@ -85,14 +93,14 @@ i.fas.fa-paw{
 }
 
 #heading {
-    font-size: 23px;
-    font-family: mangatb;
+    font-size: 22px;
+    font-family: animebld;
     color: var(--panda-color);
 }
 
 #heading2 {
-    font-size: 23px;
-    font-family: mangatb;
+    font-size: 22px;
+    font-family: animebld;
     color: var(--panda-color1);
 }
 
@@ -123,14 +131,14 @@ i.fas.fa-paw{
     grid-template-columns: 1fr 1fr 1fr;
    
     align-items: center;
-    font-size: 22px;
+    font-size: 23px;
     border-bottom: none;
     color: white;
     column-gap: 10px;
     box-shadow: 4px 4px 10px #707070;
     background-color: white;
     border-radius: .25rem;
-    font-family: mangati;
+    font-family: animeital;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -140,7 +148,7 @@ i.fas.fa-paw{
 
 .score-outer > .countBox {
     justify-self: center;
-    font-size: 22px;
+    font-size: 23px !important;
     border-radius: .25rem;
     color: rgb(95, 95, 95);
     width: 90% !important;
@@ -152,11 +160,11 @@ i.fas.fa-paw{
 .score-outer > .score {
     font-size: 22px;
     color: rgb(100, 100, 100);
-    font-family: mangati !important;
+    font-family: animeital !important;
     justify-self: center;
 }
 
 .name {
     color:rgb(100, 100, 100);
-    font-family: mangatb;
+    font-family: animebld;
 }
