--- a/style/quiz.css
+++ b/style/quiz.css
@@ -83,6 +83,12 @@ i.fas.fa-paw{
     font-size: 32px;
 }
 
+.fas.fa-times{
+    color: var(--panda-color1);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px;
+}
+
 #container {
     margin: 0 auto;
     max-width: 1200px;
@@ -168,13 +174,16 @@ i.fas.fa-paw{
     display: none;
 }
 
+#container-progressBar{
+    max-width: 1200px;
+    width: 95vw;
+}
+
 #progressBar {
     border: 2px solid silver;
     border-radius: .25rem;
     height: 27px;
     background: var(--gradient);
-    max-width: 1200px;
-    width: 95vw;
     box-shadow: 4px 4px 10px #0a0a0a;
 }
 
@@ -194,36 +203,125 @@ i.fas.fa-paw{
 
 #menu-container.show{
     left: 0px;
+    
 }
 
 #menu-container{
+    
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-end;
     z-index: 1 !important;
     height: 100%;
-    background-color: #404040;
+    background-color: #3a3a3a;
     position: absolute;
     width: 100vw;
     border-bottom-right-radius: .25rem;
     border-bottom-left-radius: .25rem;
     transition: all 0.5s ease ;
-    left: -110%;
+    left: -100%;
+    justify-content: center;
+    
 }
 
 #menu-liste{
-   list-style: none;
-   display: grid;
-   grid-template-columns: 1fr;
-   grid-template-rows: 1fr 1fr 1fr 1fr;
-   padding-left: 0;
-   text-align: center;
-   gap: 15px;
+    height: calc(100% - 108px);
+    list-style: none;
+    margin: 0!important;
+    width: calc(100% - 16px);
+    padding: 0;
+    max-width: 1200px;
 }
 
 .menu-item{
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
     font-size: 20px;
-    font-family: animebld;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    gap: 15px;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
+.item-container{
+    display: grid;
+    font-size: 20px;
+    font-family: animebld;
+    align-items: center;
+    padding: 3px;
+    height: 15%;
+    border-top: 1px solid rgba(117, 117, 117, 0.623);
+    background-color: #66666600;    
+}
 
+.item-container:hover{
+    background:  rgb(78, 78, 78) ;
+}
+
+.item-container:last-child{
+    border-bottom: 1px solid rgba(117, 117, 117, 0.623);
+}
+
+.icon{
+    justify-self: center;
+    font-size: 24px;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    color: var(--panda-color);
+}
+
+.fas.fa-crown{
+    color: rgb(223, 161, 4);
+}
+
+.fa-seedling{
+    justify-self: center;
+    font-size: 24px;    
+}
+
+.menu-p{
+    display: flex;
+    flex-direction: row;
+    text-align: center !important;
+    position: absolute;
+    font-size: 20px;
+    font-family: animeital;
+    background: linear-gradient(126deg, #9FE5CE 0%, rgba(195,232,184,1) 50%, #d0eba4 100%);;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@media screen and (max-width: 362px) {
+    #logo {
+        font-size: 18px;
+    }
+    
+    i.fas.fa-paw{
+        font-size: 28px !important;
+    }
+    
+    .fas.fa-bars{
+        font-size: 28px;
+    }
+    
+    .fas.fa-times{
+        font-size: 28px;
+    }
+
+    .icon{
+        font-size: 20px;
+    }
+
+    .menu-item{
+        font-size: 16px;
+    }
+
+    .menu-p{
+        font-size: 16px;
+    }
+
+    .fa-seedling{
+        font-size: 18px !important;
+    }
+  }
