--- a/style/highscore.css
+++ b/style/highscore.css
@@ -23,14 +23,128 @@
     --primary-color: rgb(89, 163, 166);
     --panda-color1: #d0eba4;
     --panda-color: #9FE5CE;
+    --gradient: linear-gradient(126deg, rgba(159,229,197,1) 0%, rgba(195,232,184,1) 50%, rgba(208,235,164,1) 100%);
 }
 
 body{
-    background-color: #242424;
+    background: #242424;
     margin: 0;
     height: 100vh;
- 
 }
+
+
+#PopUpName{
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.795);
+}
+
+#inner{
+    height: fit-content;
+    width: 90vw;
+    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    flex-direction: column;
+    background: var(--gradient);
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 4px 4px 10px #292929;
+  
+}
+
+#popUpInner {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: #404040;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 4px;
+    padding: 10px;
+    font-family: animeital;
+    font-size: 21px;
+    box-shadow: 4px 4px 10px #292929;
+}
+
+#points{
+    grid-row-start: 1;
+    grid-column-start: 3;
+    text-align: end;
+}
+
+#currentScore{
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: span col2-start;
+}
+
+#inputLabel{
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: span col2-start;
+    
+}
+
+#inputName{
+    grid-row-start: 2;
+    grid-column-start: 3;
+    width: 95%;
+    justify-self: end;
+    border: 1px solid silver;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 21px;
+    font-family: animeital;
+    background-color: #404040;
+    outline: none;
+    color: white;
+    
+}
+
+#submitButton{
+    margin-top: 20px;
+    grid-row-start: 2;
+    grid-column-start: 3;
+    background-color: #404040;
+    box-shadow: 4px 4px 10px #292929;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    border:none;
+    border-radius: 4px;
+    font-size: 21px;
+    font-family: animebld;
+}
+
+#closingButton{
+    margin-top: 20px;
+    grid-row-start: 2;
+    grid-column-start: 1;
+    background-color: #404040;
+    box-shadow: 4px 4px 10px #292929;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    border:none;
+    border-radius: 4px;
+    font-size: 21px;
+    font-family: animebld;
+}
+
+
 
 #container-header-outer{
     width: 95vw;
@@ -53,7 +167,7 @@ body{
     width: 100%;
     border-radius: .25rem;
     align-self: top !important;
-    background-color: rgba(255, 255, 255, 0.137);
+    background-color: #404040;
     margin-top: 12px;
     margin-bottom: 12px;
     box-shadow: 4px 4px 10px #0a0a0a;
@@ -111,7 +225,6 @@ i.fas.fa-paw{
 }
 
 
-
 #highscoreTable-container {
     max-width: 1200px;
     width: 95vw;
@@ -131,7 +244,6 @@ i.fas.fa-paw{
     height: 5vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-   
     align-items: center;
     font-size: 23px;
     border-bottom: none;
@@ -156,7 +268,6 @@ i.fas.fa-paw{
     width: 90% !important;
     text-align: center;
     border: 1px solid white;
-
 }
 
 .score-outer > .score {
