--- a/style/category.css
+++ b/style/category.css
@@ -15,35 +15,110 @@
     src: url(../fonts/animeace2_bld.ttf);
 }
 
-body{
-    background-color: #404040;
-    margin: 0;
+:root{
+    --primary-color: rgb(89, 163, 166);
+    --panda-color1: #d0eba4;
+    --panda-color: #9FE5CE;
+    --gradient: linear-gradient(126deg, rgba(159,229,197,1) 0%, rgba(195,232,184,1) 50%, rgba(208,235,164,1) 100%);
 }
 
-#container-app {
+body{
+    background-color: #242424;
+    margin: 0;
+    height: 100vh;
+}
+
+#container-header-outer{
+    width: 95vw;
+    max-width: 1200px;
+    height: 100%;
+}
+
+#container-header{
+    z-index: 3;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    height: 10vh;
+    width: 100%;
+    border-radius: .25rem;
+    align-self: top !important;
+    background-color: #404040;
+    margin-top: 12px;
+    box-shadow: 4px 4px 10px #0a0a0a;
+
+}
+
+#logo {
+    padding-left: 1rem;
+    font-size: 22px;
+    align-self: center;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-family: animebld;
+}
+
+#menu {
+    align-self: center;
+    justify-self: right;
+    padding-right: 1rem;
+}
+
+i.fas.fa-paw{
+    color: var(--panda-color);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px !important;
+}
+
+.fas.fa-bars{
+    color: var(--panda-color1);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px;
+    display: none;
+}
+
+#container {
     margin: 0 auto;
     max-width: 1200px;
     width: 95vw;
+    position: relative;
+}
+
+#container-body {
+    height: 100%;
     display: grid;
-    grid-template-rows: 0.1fr 1fr;
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+
+#container-app {
+    margin: 0 auto;
+    width: 95vw;
+    display: grid;
+    grid-template-rows: 1fr;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
 #categoryHeading{
-    padding-top: 50px;
-    font-size: 30px;
+   justify-self: center;
+   font-size: 22px;
+   color: var(--panda-color);
+    padding-top: 20px;
     font-family: animebld;
     text-align: center;
-   
+    color: white;
 }
 
 #container-menu{
+    max-width: 600px;
     display: grid;
-    height: 80%;
+    height: 95%;
     align-items: center;
     grid-template-rows: 1fr 1fr 1fr 1fr; 
     gap: 20px;
@@ -66,17 +141,35 @@ body{
     width: 100%;
 }
 
-#start{
-    background-image: url("../img/sad-anime-1.jpg");
-
+#marvel{
+    background-color: rgba(136, 0, 0, 0.897);
+  
     color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
 }
 
-#multi{
-    background-image: url("../img/thumb-350-947037.jpg");
-    color: black;
-   
-    
+#anime{
+    background-image: url("../img/106727ED-1401-46DF-B618-D51F29C0DC9D.webp");
+    color: white;
+    background-size: cover;
+    background-position: center;
+    text-shadow: 1px 1px 2px #0a0a0a;
+}
+
+#entertainment{
+    background-image: url("../img/baddfdc7800fde56f833875bee964b1b.png");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+}
+
+#pandaFav{
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    background-size: cover;
+    background-position: center;
+    background-image: url("../img/1144293.jpeg");
 }
 
 .menu-button:hover {
