--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,17 @@
     color: rgb(223, 161, 4);
 }
 
+.fas.fa-times{
+    color: var(--panda-color1);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px;
+    cursor: pointer;
+}
+
+.fa-paw{
+    cursor: pointer;
+}
+
 #menu-container.show{
     left: 0px;
     
@@ -45,6 +56,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    cursor: pointer;
 }
 
 .item-container{
@@ -73,8 +85,8 @@
     color: var(--panda-color);
 }
 
-.fas.fa-crown{
-    color: rgb(223, 161, 4);
+.fas.fa-bars{
+    cursor: pointer;
 }
 
 .fa-seedling{
