--- a/style/quiz.css
+++ b/style/quiz.css
@@ -32,13 +32,13 @@ body{
     background-color: #242424;
     margin: 0;
     height: 100vh;
- 
 }
 
 #container-header-outer{
     width: 95vw;
     max-width: 1200px;
     height: 100%;
+   
 }
 
 #container-header{
@@ -81,12 +81,7 @@ i.fas.fa-paw{
     color: var(--panda-color1);
     text-shadow: 1px 1px 2px #0a0a0a;
     font-size: 32px;
-}
-
-.fas.fa-times{
-    color: var(--panda-color1);
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-size: 32px;
+    display: none;
 }
 
 #container {
