--- a/style/category.css
+++ b/style/category.css
@@ -25,13 +25,13 @@
 body{
     background-color: #242424;
     margin: 0;
-    height: 100vh;
+    height: unset;
 }
 
 #container-header-outer{
     width: 95vw;
-    max-width: 1200px;
-    height: 100%;
+    max-width: 600px;
+    height: 108px;
 }
 
 #container-header{
@@ -39,7 +39,7 @@ body{
     position: relative;
     display: grid;
     grid-template-columns: auto 1fr;
-    height: 10vh;
+    height: 81px;
     width: 100%;
     border-radius: .25rem;
     align-self: top !important;
@@ -85,23 +85,10 @@ i.fas.fa-paw{
 }
 
 #container-body {
-    height: 100%;
+    
     display: grid;
     grid-template-rows: auto 1fr;
     justify-items: center;
-    align-items: center;
-}
-
-
-#container-app {
-    margin: 0 auto;
-    width: 95vw;
-    display: grid;
-    grid-template-rows: 1fr;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    justify-content: center;
     align-items: center;
 }
 
@@ -118,10 +105,10 @@ i.fas.fa-paw{
 #container-menu{
     max-width: 600px;
     display: grid;
-    height: 95%;
+    height: calc(100vh - 100px);
     align-items: center;
-    grid-template-rows: 1fr 1fr 1fr 1fr; 
-    gap: 20px;
+    grid-template-rows: repeat(150, 22%); 
+    row-gap: 3%;
     width: 95vw;
 }
 
@@ -139,6 +126,7 @@ i.fas.fa-paw{
     font-family: animebld !important;
     align-items: center;
     width: 100%;
+
 }
 
 #marvel{
