--- a/style/main.css
+++ b/style/main.css
@@ -38,12 +38,14 @@
 }
 
 #menu-liste{
-    height: calc(100% - 108px);
+    display: grid;
+    grid-template-rows: 0.15fr auto;
+    height: 100%;
     list-style: none;
     margin: 0!important;
     width: calc(100% - 16px);
     padding: 0;
-    max-width: 1200px;
+    max-width: 600px;
 }
 
 .menu-item{
@@ -56,6 +58,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
+  
     cursor: pointer;
 }
 
