--- a/style/highscore.css
+++ b/style/highscore.css
@@ -153,7 +153,7 @@ body{
 #container-header-outer{
     width: 95vw;
     max-width: 600px;
-    height: 100%;
+    height: 100px;
 }
 
 #container-header{
@@ -200,9 +200,10 @@ i.fas.fa-paw{
 
 #container-body {
     height: 100%;
-    display: grid;
-    grid-template-rows: auto auto 1fr;
-    justify-items: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     row-gap: 20px;
 }
 
@@ -219,7 +220,10 @@ i.fas.fa-paw{
 }
 
 #heading-container{
-    margin-top: 20px;
+    margin-top: 20px !important;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 
