--- a/style/index.css
+++ b/style/index.css
@@ -14,6 +14,10 @@
     font-family: animebld;
     src: url(../fonts/animeace2_bld.ttf);
 }
+@font-face {
+    font-family: animeital;
+    src: url(../fonts/animeace2_ital.ttf);
+}
 
 :root {
     --primary-color: rgb(89, 163, 166);
@@ -80,7 +84,7 @@ i.fas.fa-paw{
 #container-body {
     height: 100%;
     display: grid;
-    grid-template-rows: 1fr auto 0.4fr;
+    grid-template-rows: auto 1fr;
     justify-items: center;
     align-items: center;
 }
@@ -90,15 +94,15 @@ i.fas.fa-paw{
     flex-direction: column;
     max-width: 600px;
     width: 95vw;
+    height: 100%;
 }
 
 #app-foto {
     margin: auto;
     height: 35vh;
-    margin-bottom: 55px;
     border-radius: .25rem;
     text-align: center;
-    max-width: 400px;
+    max-width: 500px;
 
 }
 
@@ -116,6 +120,7 @@ img {
     align-items: center;
     grid-template-rows: 1fr 1fr 1fr; 
     gap: 20px;
+    margin-bottom: 40px;
 }
 
 .menu-button{
