--- a/style/main.css
+++ b/style/main.css
@@ -39,13 +39,17 @@
 
 #menu-liste{
     display: grid;
-    grid-template-rows: 0.15fr auto;
+    grid-template-rows: auto;
     height: 100%;
     list-style: none;
     margin: 0!important;
     width: calc(100% - 16px);
     padding: 0;
     max-width: 600px;
+}
+
+#h:first-child {
+    margin-top: 110px;
 }
 
 .menu-item{
@@ -107,6 +111,7 @@
     background: linear-gradient(126deg, #9FE5CE 0%, rgba(195,232,184,1) 50%, #d0eba4 100%);;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    
 }
 
 @media screen and (max-width: 362px) {
