responsive index page done, multi_proto

--- a/style/index.css
+++ b/style/index.css
@@ -26,58 +26,6 @@
     --gradient: linear-gradient(126deg, rgba(159,229,197,1) 0%, rgba(195,232,184,1) 50%, rgba(208,235,164,1) 100%);
 }
 
-body{
-    background-color: #242424;
-    margin: 0;
-    height: 100vh;
-}
-
-#container-header-outer{
-    width: 95vw;
-    max-width: 600px;
-    height: 100%;
-}
-
-#container-header{
-    z-index: 3;
-    position: relative;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    height: 81px;
-    width: 100%;
-    border-radius: .25rem;
-    align-self: top !important;
-    background-color: #404040;
-    margin-top: 12px;
-    box-shadow: 4px 4px 10px #0a0a0a;
-}
-
-#logo {
-    padding-left: 1rem;
-    font-size: 22px;
-    align-self: center;
-    color: white;
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-family: animebld;
-}
-
-#menu {
-    align-self: center;
-    justify-self: right;
-    padding-right: 1rem;
-}
-
-i.fas.fa-paw{
-    color: var(--panda-color);
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-size: 32px ;
-}
-
-.headerbar.fas.fa-cog{
-    color: var(--panda-color1);
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-size: 32px ;
-}
 
 #container-body {
     height: 100%;
@@ -165,7 +113,7 @@ img {
 }
 
 @media screen and (max-width: 312px) {
-    #app-foto{
+    #app-foto {
         max-width: 400px !important;
         max-height: 200px !important;
     }
@@ -174,5 +122,12 @@ img {
 @media screen and (min-height: 1050px) {
     .menu-button {
         font-size: 30px !important;
+    }
+}
+
+@media screen and (max-height: 645px) { 
+    #container-menu {
+        gap:10px !important;
+        margin-bottom: 20px!important;
     }
 }
