--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,65 @@
+body{
+    background-color: #242424;
+    margin: 0;
+    height: 100vh;
+}
+
+#container-header-outer{
+    width: 95vw;
+    max-width: 600px;
+    height: 100%;
+}
+
+#container-header{
+    z-index: 3;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    height: 81px;
+    width: 100%;
+    border-radius: .25rem;
+    align-self: top !important;
+    background-color: #404040;
+    margin-top: 12px;
+    box-shadow: 4px 4px 10px #0a0a0a;
+}
+
+#logo {
+    padding-left: 1rem;
+    font-size: 22px;
+    align-self: center;
+    color: white;
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-family: animebld;
+}
+
+#menu {
+    align-self: center;
+    justify-self: right;
+    padding-right: 1rem;
+}
+
+i.fas.fa-paw{
+    color: var(--panda-color);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px ;
+}
+
+.headerbar.fas.fa-cog{
+    color: var(--panda-color1);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px ;
+}
+
 .fas.fa-crown{
     font-size: 24px !important;
     color: rgb(223, 161, 4);
+}
+
+.fas.fa-bars{
+    color: var(--panda-color1);
+    text-shadow: 1px 1px 2px #0a0a0a;
+    font-size: 32px;
 }
 
 .fas.fa-times{
@@ -16,11 +75,9 @@
 
 #menu-container.show{
     left: 0px;
-    
 }
 
 #menu-container{
-    
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -34,7 +91,6 @@
     transition: all 0.5s ease ;
     left: -100%;
     justify-content: center;
-    
 }
 
 #menu-liste{
@@ -111,6 +167,18 @@
     background: linear-gradient(126deg, #9FE5CE 0%, rgba(195,232,184,1) 50%, #d0eba4 100%);;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+@media screen and (min-width: 700px) {
+    #menu-container.show{
+        top: 0px !important;
+    }
+
+    #menu-container {
+        top: -100% !important;
+        left: 0% !important;
+    }
+
 }
 
 @media screen and (max-width: 365px) {
@@ -200,5 +268,20 @@
 
     #menu-liste{
         max-width: 450px !important;
+    }
+}
+
+@media screen and (max-height: 645px) { 
+    #container-menu {
+        gap:10px !important;
+        margin-bottom: 20px!important;
+    }
+
+    #container-header { /*für alle seiten */
+        height: 61px !important;
+    }
+
+    #h:first-child {
+        margin-top: 90px;
     }
 }
