--- a/style/category.css
+++ b/style/category.css
@@ -31,49 +31,14 @@ body{
 #container-header-outer{
     width: 95vw;
     max-width: 600px;
-    height: 108px;
-}
-
-#container-header{
-    z-index: 3;
-    position: relative;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    height: 81px;
-    width: 100%;
-    border-radius: .25rem;
-    align-self: top !important;
-    background-color: #404040;
-    margin-top: 12px;
-    box-shadow: 4px 4px 10px #0a0a0a;
-}
-
-#logo {
-    padding-left: 1rem;
-    font-size: 22px;
-    align-self: center;
-    color: white;
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-family: animebld;
-}
-
-#menu {
-    align-self: center;
-    justify-self: right;
-    padding-right: 1rem;
-}
-
-i.fas.fa-paw{
-    color: var(--panda-color);
-    text-shadow: 1px 1px 2px #0a0a0a;
-    font-size: 32px !important;
+    height: 108px !important;
 }
 
 .fas.fa-bars{
     color: var(--panda-color1);
     text-shadow: 1px 1px 2px #0a0a0a;
     font-size: 32px;
-    display: none;
+    display: none !important;
 }
 
 #container {
