--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@ body{
 #container-header-outer{
     width: 95vw;
     max-width: 600px;
-    height: 100%;
+ 
 }
 
 #container-header{
@@ -84,7 +84,7 @@ i.fas.fa-paw{
     z-index: 1 !important;
     height: 100%;
     background-color: #3a3a3a;
-    position: absolute;
+    position: fixed;
     width: 100vw;
     border-bottom-right-radius: .25rem;
     border-bottom-left-radius: .25rem;
@@ -178,7 +178,6 @@ i.fas.fa-paw{
         top: -100% !important;
         left: 0% !important;
     }
-
 }
 
 @media screen and (max-width: 365px) {
@@ -257,26 +256,16 @@ i.fas.fa-paw{
     }
   }
 
-@media screen and (max-height: 750px) {
-    #container-app {
-        max-width: 450px !important;
-    }
-
-    #container-header-outer {
-        max-width: 450px !important;
-    }
-
-    #menu-liste{
-        max-width: 450px !important;
-    }
-}
-
 @media screen and (max-height: 645px) { 
     #container-menu {
         gap:10px !important;
         margin-bottom: 20px!important;
     }
+}
 
+
+
+@media screen and (max-height: 480px) { 
     #container-header { /*für alle seiten */
         height: 61px !important;
     }
